Applies prettier configs
