# src/controllers/category.controller.ts
@@ -16,12 +16,14 @@ import * as apiUtils from '../utils/utils.js';
  * @param  {Response} res
  */
 export const post = async (req: Request, res: Response) => {
-    try {
-        const category: Category = await categoryService.create(req.body);
-        res.status(200).json(apiUtils.buildSuccessResponse(category));
-    } catch (error) {
-        res.status(500).json(apiUtils.buildErrorResponse([(error as Error).message]));
-    }
+  try {
+    const category: Category = await categoryService.create(req.body);
+    res.status(200).json(apiUtils.buildSuccessResponse(category));
+  } catch (error) {
+    res
+      .status(500)
+      .json(apiUtils.buildErrorResponse([(error as Error).message]));
+  }
 };
 
 /**
@@ -31,12 +33,14 @@ export const post = async (req: Request, res: Response) => {
  * @param  {Response} res
  */
 export const list = async (req: Request, res: Response) => {
-    try {
-        const categories: Category[] = await categoryService.list();
-        res.status(200).json(apiUtils.buildSuccessResponse(categories));
-    } catch (error) {
-        res.status(500).json(apiUtils.buildErrorResponse([(error as Error).message]));
-    }
+  try {
+    const categories: Category[] = await categoryService.list();
+    res.status(200).json(apiUtils.buildSuccessResponse(categories));
+  } catch (error) {
+    res
+      .status(500)
+      .json(apiUtils.buildErrorResponse([(error as Error).message]));
+  }
 };
 
 /**
@@ -46,12 +50,14 @@ export const list = async (req: Request, res: Response) => {
  * @param  {Response} res
  */
 export const get = async (req: Request, res: Response) => {
-    try {
-        const category: Category | null = await categoryService.get(+req.params.id);
-        res.status(200).json(apiUtils.buildSuccessResponse(category));
-    } catch (error) {
-        res.status(500).json(apiUtils.buildErrorResponse([(error as Error).message]));
-    }
+  try {
+    const category: Category | null = await categoryService.get(+req.params.id);
+    res.status(200).json(apiUtils.buildSuccessResponse(category));
+  } catch (error) {
+    res
+      .status(500)
+      .json(apiUtils.buildErrorResponse([(error as Error).message]));
+  }
 };
 
 /**
@@ -61,12 +67,17 @@ export const get = async (req: Request, res: Response) => {
  * @param  {Response} res
  */
 export const put = async (req: Request, res: Response) => {
-    try {
-        const category: Category = await categoryService.update(+req.params.id, req.body);
-        res.status(200).json(apiUtils.buildSuccessResponse(category));
-    } catch (error) {
-        res.status(500).json(apiUtils.buildErrorResponse([(error as Error).message]));
-    }
+  try {
+    const category: Category = await categoryService.update(
+      +req.params.id,
+      req.body
+    );
+    res.status(200).json(apiUtils.buildSuccessResponse(category));
+  } catch (error) {
+    res
+      .status(500)
+      .json(apiUtils.buildErrorResponse([(error as Error).message]));
+  }
 };
 
 /**
@@ -76,10 +87,12 @@ export const put = async (req: Request, res: Response) => {
  * @param  {Response} res
  */
 export const remove = async (req: Request, res: Response) => {
-    try {
-        await categoryService.remove(+req.params.id);
-        res.status(200).json(apiUtils.buildSuccessResponse(null));
-    } catch (error) {
-        res.status(500).json(apiUtils.buildErrorResponse([(error as Error).message]));
-    }
+  try {
+    await categoryService.remove(+req.params.id);
+    res.status(200).json(apiUtils.buildSuccessResponse(null));
+  } catch (error) {
+    res
+      .status(500)
+      .json(apiUtils.buildErrorResponse([(error as Error).message]));
+  }
 };
